<resources>
    <string name="app_name">Aplicativo PI v2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="label_user">User</string>
    <string name="label_pass">Pass</string>
    <string name="label_login">Login</string>

    <string name="label_emailUser">Email:</string>
    <string name="label_assunto">Assunto:</string>
    <string name="label_message">Mensagem:</string>
    <string name="label_send">Enviar</string>
    <string name="support_email">rafael.fgoto@outlook.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="l_mpada_1">Lâmpada 1:</string>
    <string name="l_mpada_2">Lâmpada 2:</string>
    <string name="ligada">Ligada</string>
    <string name="desligada">Desligada</string>
</resources>
