<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.senac.sp.aplicativopiv2.LogadoActivity">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:id="@+id/LinearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/labelPrevisao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:text="Previsão: "/>

            <TextView
                android:id="@+id/previsao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"/>
        </LinearLayout>


        <TextView
            android:layout_margin="12dp"
            android:id="@+id/labelLamp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l_mpada_1" />

        <Switch
            android:id="@+id/switch1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/ligada"
            android:textOff="@string/desligada"
            android:textOn="@string/ligada" />

        <!--<TextView
            android:layout_margin="12dp"
            android:id="@+id/labelLamp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l_mpada_2" />

        <Switch
            android:layout_margin="12dp"
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ligada"
            android:textOff="@string/desligada"
            android:textOn="@string/ligada" />-->
    </LinearLayout>

</android.support.constraint.ConstraintLayout>